--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Week 4</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -11,7 +14,7 @@
                 <form id="info-form">
                     <label for="input-show">Enter show name</label>
                     <input type="text" id="input-show">
-                    <button id="submit">Submit</button>
+                    <button id="submit-data">Submit</button>
                 </form>
             </div>
         </nav>
