--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Week 4</title>
+        <title>Week 5</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     </head>
 
     <body>
-        <nav class="navbar">
-            <div class="info-container">
-                <form id="info-form">
-                    <label for="input-show">Enter show name</label>
-                    <input type="text" id="input-show">
-                    <button id="submit-data">Submit</button>
-                </form>
-            </div>
-        </nav>
-
-        <div class="show-container"></div>
+        <div id="map">
+        </div>
     </body>
 
-    <script src="fetcher.js" defer></script>
+    <script src="map.js" defer></script>
 </html>
